--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 /FOOL.tokens
 /SVM.tokens
 /bin/
+/FOOL.tokens
+/SVM.tokens
+/bin/
+/src/FOOLLexer.java
+/src/FOOLParser.java
+/src/SVMLexer.java
+/src/SVMParser.java
+/.classpath
